CHANGES-1.1.txt
---------------

CHANGES IN CUPS V1.1.20

	- The CUPS test suite did not undefine the PRINTER and
	  LPDEST environment variables. This could lead to bogus
	  test results (STR #380)
	- The cupsLangDefault() function now works if you don't
	  have the base OS localization installed (STR #418)
	- The pdftops filter no longer needs to create temporary
	  files with tmpnam (STR #406)
	- The HTTP code did not use a case-insensitive
	  comparison when checking for the Basic authentication
	  method (STR #407)
	- The httpEncode() function always added a trailing "="
	  character, which is not required by the Base64
	  encoding specification (STR #407)
	- The signal handlers did not need to call sigset();
	  this caused a recursion problem on some versions of
	  IRIX (STR #422)
	- Moved the scheduler termination code into the mainline
	  to be consistent with the way other signals are
	  handled (STR #423)
	- The cupsaddsmb program didn't export the new CUPS
	  driver for Windows properly (STR #390)
	- The ppdOpen() functions did not issue an error when a
	  translation string exceeded the maximum allowed by the
	  Adobe PPD specification (STR #399)
	- The default landscape orientation was not the same as
	  that defined in the PPD file (STR #397)
	- Updated the pstoraster patch files and CUPS driver to
	  work with Ghostscript 8 (STR #402)
	- The hpgltops filter did not skip PJL commands (STR
	  #379)


CHANGES IN CUPS V1.1.20rc6

	- "lp -i jobid -H restart" would often return an error
	  even though the job restarted successfully (STR #362)
	- The scheduler did not check for invalid allow/deny
	  addresses such as "11.22.33.44/24". It now masks off
	  the extra address bits and logs a warning message in
	  the error_log file (STR #337)
	- The cupstestppd utility now checks for missing
	  ImageableArea and PaperDimension attributes for each
	  defined PageSize (STR #365)
	- The IPP code did not wait for a reply indefinitely on